--- a/voidusb.conf
+++ b/voidusb.conf
@@ -1,14 +1,14 @@
 #voidUSB configuration file
 
-#Device for installation (example: /dev/sdb)
-#!!WARNING!! THIS SCRIPT WILL ONLY INSTALL ON A DEVICE WITHOUT ANY DATA ON IT, RUN `wipefs -a [YOUR USB]`
+#Device for installation (Example: /dev/sdb)
+#!!WARNING!! THIS SCRIPT WILL ONLY INSTALL ON A DEVICE WITHOUT ANY DATA ON IT, IF YOU WANT TO WIPE YOUR USB RUN `wipefs -a [YOUR USB]`
 _device="/dev/sdb"
 
 #libc selection (musl or glibc (default: musl))
-_libc=""
+_libc="musl"
 
-#Graphics drivers (AMD, Intel, Nvidia)
-_dri=""
+#Graphics drivers (amd, intel, nvidia)
+_dri="intel"
 
 #Change to true if the file has been edited.
 _conf="false"
