stage 2 works hopefully

--- a/voidusb.conf
+++ b/voidusb.conf
@@ -7,8 +7,23 @@ _device="/dev/sdb"
 #libc selection (musl or glibc (default: musl))
 _libc="musl"
 
+#locale selection (default: en_GB)
+_locale="en_GB"
+
+#time zone info (default: Europe/London)
+_timez="Europe/London"
+
+#Hostname (Default: voidUSB)
+_hostname="voidUSB"
+
+#time management settings (localtime, UTC, NTP)
+_clock="localtime"
+
 #Graphics drivers (amd, intel, nvidia)
 _dri="intel"
+
+#Additional packages to install
+_pkgs="sudo vim"
 
 #Change to true if the file has been edited.
 _conf="false"
