--- a/voidusb.conf
+++ b/voidusb.conf
@@ -13,6 +13,15 @@ _locale="en_GB"
 #time zone info (default: Europe/London)
 _timez="Europe/London"
 
+#User creation. Set to false to only have root user (not recommended)
+_cruser="true"
+
+#User to create (default: user)
+_user="user"
+
+#Real user name (default: voidUSB User)
+_realuser="voidUSB User"
+
 #Hostname (Default: voidUSB)
 _hostname="voidUSB"
 
@@ -21,6 +30,9 @@ _clock="localtime"
 
 #Graphics drivers (amd, intel, nvidia)
 _dri="intel"
+
+#Shell, for better compatiblity either use bash or zsh, but fish is quite nice (Default: fish)
+_shell="fish"
 
 #Additional packages to install
 _pkgs="sudo vim"
