--- a/voidusb.conf
+++ b/voidusb.conf
@@ -7,6 +7,9 @@ _device="/dev/sdb"
 #libc selection (musl or glibc (default: musl))
 _libc="musl"
 
+#install the gui or not? (default: false)
+_gui="false"
+
 #locale selection (default: en_GB)
 _locale="en_GB"
 
