--- a/voidusb.conf
+++ b/voidusb.conf
@@ -31,7 +31,7 @@ _hostname="voidUSB"
 #time management settings (localtime, UTC, NTP)
 _clock="localtime"
 
-#Graphics drivers (amd, intel, nvidia)
+#Graphics drivers (amd, intel, nvidia, nvidia-prop (for the proprietary drivers))
 _dri="intel"
 
 #Shell, for better compatiblity either use bash or zsh, but fish is quite nice (Default: fish)
